# flask-htmx

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  package-lock.json  populate_database.py  pyproject.toml  run.py
app/: __init__.py  results.py
app/static/: main.css
app/templates/: base.html  data_table.html  dataset.html  figure.html  figure.js  heatmap.html  index.html
fast_api_app/: main.py
fast_api_app/routers/: dataset.py
tailwind_src/: input.css
