[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]


[project]
name="demoApp"
version="0.1.0"
license= {file = "LICENSE"}
readme = "README.md"
authors=[
    {name="Joseph Briggs", email = "jhbriggs23@gmail.com"}
    ]
maintainers=[
    {name="Joseph Briggs", email = "jhbriggs23@gmail.com"}
    ]
description="demo flask and htmx"
dependencies= [
    "blinker==1.7.0",
    "click==8.1.7",
    "Flask==3.0.0",
    "gunicorn==21.2.0",
    "itsdangerous==2.1.2",
    "Jinja2==3.1.3",
    "MarkupSafe==2.1.3",
    "packaging==23.2",
    "Werkzeug==3.0.1",
]
