[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]


[project]
name="demoApp"
version="0.1.0"
license= {file = "LICENSE"}
readme = "README.md"
authors=[
    {name="Joseph Briggs", email = "jhbriggs23@gmail.com"}
    ]
maintainers=[
    {name="Joseph Briggs", email = "jhbriggs23@gmail.com"}
    ]
description="demo flask and htmx"
dependencies= [
"annotated-types==0.6.0",
"anyio==4.2.0",
"blinker==1.7.0",
"click==8.1.7",
"exceptiongroup==1.2.0",
"fastapi==0.109.0",
"Flask==3.0.0",
"gunicorn==21.2.0",
"h11==0.14.0",
"idna==3.6",
"itsdangerous==2.1.2",
"Jinja2==3.1.3",
"MarkupSafe==2.1.3",
"numpy==1.26.3",
"packaging==23.2",
"pydantic==2.6.0",
"pydantic-core==2.16.1",
"sniffio==1.3.0",
"starlette==0.35.1",
"typing-extensions==4.9.0",
"uvicorn==0.27.0.post1",
"Werkzeug==3.0.1"

]
